# modern-rgbd-slam

./: .editorconfig  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  to do.txt
apps/: CMakeLists.txt
apps/CeresMinimalExample/: CMakeLists.txt
apps/CeresMinimalExample/src/: CeresMinimalExample.cpp
apps/CxxoptsMinimalExample/: CMakeLists.txt
apps/CxxoptsMinimalExample/src/: CxxoptsMinimalExample.cpp
apps/EigenMinimalExample/: CMakeLists.txt
apps/EigenMinimalExample/src/: EigenMinimalExample.cpp
apps/G2OMinimalExample/: CMakeLists.txt
apps/G2OMinimalExample/src/: G2OMinimalExample.cpp
apps/JSONMinimalExample/: CMakeLists.txt  PiConfig.json
apps/JSONMinimalExample/src/: JSONMinimalExample.cpp
apps/RealsenseMinimalExample/: CMakeLists.txt
apps/RealsenseMinimalExample/src/: RealsenseMinimalExample.cpp
apps/RealsensePipeline/: CMakeLists.txt  Offline.json
apps/RealsensePipeline/src/: RealsensePipeline.cpp
apps/SlamPipeline/: CMakeLists.txt  Offline.json
apps/SlamPipeline/src/: SlamPipeline.cpp
apps/SophusMinimalExample/: CMakeLists.txt
apps/SophusMinimalExample/src/: SophusMinimalExample.cpp
apps/SpdlogMinimalExample/: CMakeLists.txt
apps/SpdlogMinimalExample/src/: SpdlogMinimalExample.cpp
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  info.dox
modules/: CMakeLists.txt
modules/Components/: CMakeLists.txt
modules/Components/include/Components/: Camera.h  Frame.h  Map.h  MapPoint.h  Params.h  Pose.h
modules/Components/include/Room/Components/: Frame.h  MapPoint.h  Pose.h
modules/RGBDSlam/: CMakeLists.txt
modules/RGBDSlam/include/RGBDSlam/: BundleAdjustment.h  Feature.h  Motion.h  Odometry.h  Track.h
modules/RGBDSlam/include/Room/RGBDSlam/: BundleAdjustment.h  Feature.h  Frame.h  ICP.h  Motion.h  Odometry.h  Pose.h  ReprojICP.h
modules/RGBDSlam/src/: BundleAdjustment.cpp  Feature.cpp  Frame.cpp  ICP.cpp  Motion.cpp  Odometry.cpp  ReprojICP.cpp  Track.cpp
